examples/legacy/invalid_scl/invalid_input_ext.scl
@file("one.abc")
input one(a: usize, b: usize)

@file("two")
input two(a: usize, b: usize)
